# pkg/api/handlers/wallets_debit.go
@@ -5,17 +5,25 @@ import (
 
 	"github.com/formancehq/wallets/pkg/core"
 	"github.com/formancehq/wallets/pkg/wallet"
+	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/render"
 )
 
 func (m *MainHandler) DebitWalletHandler(w http.ResponseWriter, r *http.Request) {
-	id := r.URL.Query().Get("wallet_id")
+	id := chi.URLParam(r, "wallet_id")
 
-	err := m.funding.Debit(r.Context(), wallet.Debit{
+	debit := wallet.Debit{
 		WalletID: id,
 		// @todo: parse amount from request
-		Amount: core.Monetary{},
-	})
+		Amount: core.Monetary{
+			Asset:  "USD/2",
+			Amount: core.NewMonetaryInt(100),
+		},
+		// @todo: parse pending from request
+		Pending: true,
+	}
+
+	hold, err := m.funding.Debit(r.Context(), debit)
 
 	if err != nil {
 		render.Status(r, http.StatusUnprocessableEntity)
@@ -26,5 +34,13 @@ func (m *MainHandler) DebitWalletHandler(w http.ResponseWriter, r *http.Request)
 		return
 	}
 
-	render.Status(r, http.StatusNoContent)
+	if hold == nil {
+		render.Status(r, http.StatusNoContent)
+		return
+	}
+
+	render.Status(r, http.StatusCreated)
+	render.JSON(w, r, map[string]interface{}{
+		"hold": hold,
+	})
 }
